# korb.guru

./: .env.example  .env.template  .gitattributes  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  compose.yml  docker-compose.yml  package.json  pnpm-lock.yaml  skills-lock.json  todo.md  turbo.json
.agents/skills/: AGENTS.md
.claude/skills/: resolve-pr-comments
.docs/: DOCUMENTATION_GUIDE.md  README.md
.docs/adr/: 001-fastapi-convex-split.md  README.md  _template.md
.docs/architecture/: fastapi-convex-interaction.md  production-overview.md  scraper-ingestion.md
.docs/archive/: clerk-expo-convex-auth-downgrade-2026-03.md  expo-monorepo-official-comparison-2026-03.md
.docs/guides/: README.md  analytics.md  android-emulator-linux.md  app-store-compliance-checklist.md  authentication.md  contracts.md  database.md  local-dev.md  mobile-simulators-and-devices.md  storybook-mobile.md  testing.md
.docs/reference/: api.md  auth.md
.docs/runbooks/: README.md  deploy-and-rollback.md  incident-response.md
.github/workflows/: ci.yml
.sisyphus/plans/: expo-fastapi-convex-monorepo.md
apps/: README.md
apps/api/: .env.example  AGENTS.md  README.md  openapi.json  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250310_initial_example_schema.py  20260311_f52f8e9e1113_add_users_table.py  20260315_add_auto_refill_and_grocery_category.py  20260315_add_store_gmaps_fields.py  20260315_add_swipe_actions_unique_constraint.py  20260315_add_unique_constraints.py  20260315_seed_zurich_stores.py
apps/api/src/: analytics.py  auth.py  config.py  db.py  dependencies.py  ingest_ratelimit.py  logging_config.py  main.py  request_context.py
apps/api/src/models/: __init__.py  auto_refill.py  meal_plan.py  poll.py  product.py  recipe.py  store.py  user.py
apps/api/src/qdrant/: client.py  collections.py
apps/api/src/routes/: __init__.py  budget.py  examples.py  grocery.py  households.py  ingest.py  me.py  meal_plans.py  messages.py  notifications.py  polls.py  products.py  receipts.py  recipes.py  route.py  status.py  stores.py
apps/api/src/schemas/: auth.py  grocery.py  household.py  message.py  product.py  recipe.py  route.py
apps/api/src/services/: discovery_service.py  embedding_service.py  grocery_service.py  llm_service.py  product_service.py  recipe_service.py  route_service.py
apps/api/tests/: factories.py  test_auth.py  test_examples_migrated_schema.py  test_users.py  test_users_integration.py
apps/scraper/: .env.example  AGENTS.md  README.md  package.json  pyproject.toml
apps/scraper/src/: __init__.py  cli.py  ingestion.py
apps/scraper/tests/: test_smoke.py
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: config.py  database.py  dependencies.py  limiter.py  main.py  seed_stores.py
backend/app/models/: __init__.py  budget.py  grocery.py  household.py  meal_plan.py  message.py  notification.py  poll.py  product.py  recipe.py  store.py  user.py
backend/app/qdrant/: client.py  collections.py
backend/app/routers/: auth.py  budget.py  grocery.py  households.py  meal_plans.py  messages.py  notifications.py  polls.py  products.py  receipts.py  recipes.py  route.py  users.py
backend/app/schemas/: auth.py  budget.py  grocery.py  household.py  meal_plan.py  message.py  poll.py  product.py  recipe.py  route.py
backend/app/services/: auth_service.py  discovery_service.py  embedding_service.py  grocery_service.py  llm_service.py  poll_service.py  product_service.py  recipe_service.py  route_service.py
backend/tests/: conftest.py  test_auth.py  test_households.py  test_products.py  test_recipes.py
crawler/smartcart/: pyproject.toml
docs/: actors.md  api-reference.md  architecture.md  crawler-apify.md  crawler-smartcart.md  environment-variables.md  frontend-backend-comparison.md  frontend-improvements.md  getting-started.md  qdrant-integration.md  qdrant.md
scripts/: db-assert-local.mjs  db-migrate-generate.mjs  db-ready.mjs  db-reset.mjs  db-seed-postgres.mjs  dev-backend-then-app.sh  serve-reports.mjs
(+128 files in other folders)
