[project]
name = "korb-guru-backend"
version = "0.1.0"
description = "AI-powered meal planning & smart grocery shopping API"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115,<0.116",
    "uvicorn[standard]>=0.34,<0.35",
    "sqlmodel==0.0.22",
    "psycopg[binary]>=3.2,<3.3",
    "python-jose[cryptography]>=3.3,<3.4",
    "passlib[bcrypt]>=1.7,<1.8",
    "bcrypt>=4.1,<4.2",
    "python-multipart>=0.0.18",
    "qdrant-client[fastembed]>=1.17,<2",
    "apify-client>=1.8,<2",
    "httpx>=0.28,<0.29",
    "pydantic-settings>=2.7,<3",
    "slowapi>=0.1,<0.2",
    "prometheus-fastapi-instrumentator>=7.0,<8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
