[project]
name = "korb-scraper"
version = "0.1.0"
description = "Recipe scraper for Korb meal planning app"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
scraper = "src.cli:main"
korb-scraper = "src.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
